--- a/new_sokoban_solver.cbp
+++ b/new_sokoban_solver.cbp
@@ -7,8 +7,8 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin\Debug\new_sokoban_solver" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Debug\" />
+				<Option output="bin/Debug/new_sokoban_solver" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -21,8 +21,8 @@
 				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="bin\Release\new_sokoban_solver" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Release\" />
+				<Option output="bin/Release/new_sokoban_solver" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -40,15 +40,19 @@
 		<Linker>
 			<Add library="alleg" />
 		</Linker>
+		<Unit filename="SauvInfo.cpp" />
+		<Unit filename="SauvInfo.h">
+			<Option compile="1" />
+		</Unit>
 		<Unit filename="graphic.cpp" />
 		<Unit filename="graphic.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="maze.cpp" />
 		<Unit filename="maze.h" />
-		<Unit filename="utils\console.cpp" />
-		<Unit filename="utils\console.h" />
-		<Unit filename="utils\coord.cpp" />
-		<Unit filename="utils\coord.h" />
+		<Unit filename="utils/console.cpp" />
+		<Unit filename="utils/console.h" />
+		<Unit filename="utils/coord.cpp" />
+		<Unit filename="utils/coord.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
